# CMakeList.txt : CMake project for graph_partitioning, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (graph_partitioning "graph_partitioning.cpp" "graph_partitioning.h")

# TODO: Add tests and install targets if needed.
